--- a/mariadb-deployment.yml
+++ b/mariadb-deployment.yml
@@ -1,70 +1,69 @@
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: postgres-config
+  name: mariadb-config
   namespace: wiki
   labels:
-    app: postgres
+    app: mariadb
 data:
-  POSTGRES_DB: mediawiki
-  POSTGRES_USER: mediawiki
+  MARIADB_DATABASE: mediawiki
 ---
 apiVersion: v1
 kind: Secret
 metadata:
-  name: postgres-secrets
+  name: mariadb-secrets
   namespace: wiki
   labels:
-    app: postgres
+    app: mariadb
 stringData:
-  POSTGRES_PASSWORD: ${DB_PASSWORD}
+  MARIADB_ROOT_PASSWORD: ${DB_PASSWORD}
 ---
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: postgres
+  name: mariadb
   namespace: wiki
 spec:
   replicas: 1
   selector:
     matchLabels:
-      app: postgres
+      app: mariadb
   template:
     metadata:
       labels:
-        app: postgres
+        app: mariadb
     spec:
       nodeSelector:
         kubernetes.io/hostname: 'oracle-paris'
       containers:
-        - name: postgres
-          image: postgres:13
+        - name: mariadb
+          image: mariadb
           imagePullPolicy: "IfNotPresent"
           ports:
-            - containerPort: 5432
+            - containerPort: 3306
           envFrom:
             - configMapRef:
-                name: postgres-config
+                name: mariadb-config
             - secretRef:
-                name: postgres-secrets
+                name: mariadb-secrets
           volumeMounts:
-            - mountPath: /var/lib/postgresql/data
-              name: postgredb
+            - mountPath: /var/lib/mysql
+              name: mariadb
       volumes:
-        - name: postgredb
+        - name: mariadb
           hostPath:
-            path: /mnt/wiki-data/postgres
+            path: /mnt/wiki-data/mariadb
 ---
 kind: Service
 apiVersion: v1
 metadata:
-  name: postgres-service
+  name: mariadb-service
   namespace: wiki
 spec:
   selector:
-    app: postgres
+    app: mariadb
   ports:
     - protocol: TCP
-      port: 5432
+      port: 3306
       name: main
   type: ClusterIP
